Fixing align h2

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -62,6 +62,7 @@
   }
 }
 .home-h2 {
+  text-align: left;
   text-shadow:
     0 0 7px #fff,
     0 0 10px #fff,
