--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -30,7 +30,7 @@ margin: 50px 0px 50px 0;
   overflow: hidden;
 }
 
-.card-wagon{
+.card-wagon {
   border: solid 1px white;
   display: flex;
   align-items: flex-start;
@@ -144,7 +144,6 @@ margin: 50px 0px 50px 0;
 @media(max-width: 480px) {
 
   .home-h2 {
-    text-align: center;
   }
 
   .home-card-container {
